--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,8 +19,8 @@ $primary-color: rgba(255,178,0,1);
 $primary-color--hovered: rgba(233,161,0,1);
 $accent-color: rgba(255,105,0,1);
 $accent-color--hovered: rgba(234,96,0,1);
-$dp-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-$dp-shadow--accent: 0 20px 60px 0 rgba(0,0,0,0.32);
+$dp-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+$dp-shadow--accent: 0 20px 60px 0 rgba(0,0,0,0.1);
 $--transition: all .4s ease-in-out;
 
 
@@ -270,10 +270,13 @@ header {
 }
 
 .main-hero {
+    background-color: $dark;
+}
+
+.main-hero-container {
     display: flex;
     align-items: center;
     height: 100vh;
-    background-color: $dark;
 
     & .hero-content {
         max-width: 100%;
@@ -329,8 +332,17 @@ header {
 }
 
 .simple-content {
-    .heading {
-        margin-bottom: 24px;
+
+    padding: 24px;
+
+    & .featured-holder {
+        & img {
+            width: 56px;
+            margin-bottom: 24px;
+        }
+    }
+   & .heading {
+        margin-bottom: 16px;
     }
 }
 
@@ -354,7 +366,7 @@ header {
 }
 
 .extra-features {
-    background: rgba(250,250,250,1);
+    background: $dark;
     padding: 40px 0;
 
     & .simple-content {
@@ -567,7 +579,7 @@ footer {
 
 @media (max-width: 374px) { 
     
-    .main-hero {
+    .main-hero-container {
         height: 100%;
         padding: 80px 0;
     }
@@ -692,14 +704,17 @@ footer {
 }
 
 .main-hero {
-    display: flex;
-    align-items: center;
-    height: 100vh;
+
+    & .main-hero-container {
     max-width: 1140px;
     margin-right: auto;
     margin-left: auto;
     padding-right: 15px;
     padding-left: 15px;
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    }
 
     & .hero-content {
         text-align: left;
@@ -731,6 +746,8 @@ footer {
     justify-content: flex-start;
 }
 
+
+
 .detail-asset {
     position: absolute;
     top: -500px;
@@ -748,6 +765,7 @@ footer {
 }
 
 .simple-content {
+    padding: 0;
     max-width: 400px;
 }
 
@@ -793,6 +811,32 @@ footer {
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;   
+    }
+}
+
+}
+
+@media (min-width: 1300px) { 
+
+
+.main-hero-container {
+
+    & .hero-content {
+
+        & .featured-asset {
+
+            position: absolute;
+            right: -10%;
+            top: 12%;
+
+            img {
+                width: 800px;
+                position: relative;
+                left: auto;
+            }
+    
+        } 
+        
     }
 }
 
