--- a/scss/style.scss
+++ b/scss/style.scss
@@ -244,6 +244,16 @@ body {
             color: rgba(255,255,255,1);
         }
     }
+    &.social-link {
+        font-size: 24px;
+        color: rgba(255,255,255,.7);
+        padding: 16px;
+        border-radius: 8px;
+        &:hover {
+           color: rgba(255,255,255,1);
+        }
+
+    }
 }
 
 //Structure
