Added Benefits Section

--- a/css/style.css
+++ b/css/style.css
@@ -2851,8 +2851,8 @@ html {
 
 @font-face {
   font-family: 'qgx-icons';
-  src: url("../icons/qgx-icons.eot?69a856");
-  src: url("../icons/qgx-icons.eot?69a856#iefix") format("embedded-opentype"), url("../icons/qgx-icons.ttf?69a856") format("truetype"), url("../icons/qgx-icons.woff?69a856") format("woff"), url("../icons/qgx-icons.svg?69a856#qgx-icons") format("svg");
+  src: url("../icons/qgx-icons.eot?btz4z0");
+  src: url("../icons/qgx-icons.eot?btz4z0#iefix") format("embedded-opentype"), url("../icons/qgx-icons.ttf?btz4z0") format("truetype"), url("../icons/qgx-icons.woff?btz4z0") format("woff"), url("../icons/qgx-icons.svg?btz4z0#qgx-icons") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block; }
@@ -2869,26 +2869,56 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
-.icon-facebook:before {
+.icon-api:before {
   content: "\e900"; }
 
-.icon-instagram:before {
+.icon-arrow-detail:before {
   content: "\e901"; }
 
-.icon-linkedin:before {
+.icon-arrow:before {
   content: "\e902"; }
 
-.icon-messenger:before {
+.icon-bank:before {
   content: "\e903"; }
 
-.icon-check:before {
+.icon-business:before {
   content: "\e904"; }
 
-.icon-chevron:before {
+.icon-cards:before {
   content: "\e905"; }
 
-.icon-arrow:before {
+.icon-check:before {
   content: "\e906"; }
+
+.icon-chevron:before {
+  content: "\e907"; }
+
+.icon-emprestimo:before {
+  content: "\e908"; }
+
+.icon-facebook:before {
+  content: "\e909"; }
+
+.icon-handshake:before {
+  content: "\e90a"; }
+
+.icon-hold:before {
+  content: "\e90b"; }
+
+.icon-instagram:before {
+  content: "\e90c"; }
+
+.icon-linkedin:before {
+  content: "\e90d"; }
+
+.icon-messenger:before {
+  content: "\e90e"; }
+
+.icon-transfer:before {
+  content: "\e90f"; }
+
+.icon-recarga:before {
+  content: "\e910"; }
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -2997,9 +3027,20 @@ body {
 .link {
   text-decoration: none !important;
   transition: all 0.4s ease-in-out;
-  font-weight: 600; }
+  font-weight: 600;
+  font-size: 18px; }
+  .link.primary-link {
+    color: #ffb200;
+    line-height: 24px; }
+    .link.primary-link:hover {
+      color: #e9a100; }
+  .link.neutral-link {
+    color: rgba(27, 32, 33, 0.4);
+    letter-spacing: 0;
+    line-height: 24px; }
+    .link.neutral-link:hover {
+      color: #ffb200; }
   .link.white {
-    font-size: 18px;
     color: white;
     padding: 16px;
     border-radius: 8px; }
@@ -3026,7 +3067,7 @@ header {
   padding: 32px 0; }
 
 .main-logo img {
-  width: 80px; }
+  width: 100px; }
 
 .action-holder {
   margin-top: 16px; }
@@ -3082,9 +3123,11 @@ header {
 
 .simple-content {
   padding: 24px; }
-  .simple-content .featured-holder img {
-    width: 56px;
-    margin-bottom: 24px; }
+  .simple-content .featured-holder .icon {
+    font-size: 56px;
+    margin-bottom: 24px;
+    display: block;
+    color: rgba(255, 255, 255, 0.7); }
   .simple-content .heading {
     margin-bottom: 16px; }
 
@@ -3098,7 +3141,7 @@ header {
     align-items: center;
     justify-content: center; }
     .features .feature-img img {
-      width: 80%; }
+      width: 100%; }
 
 .extra-features {
   background: #1b2021;
@@ -3212,6 +3255,40 @@ footer {
     color: rgba(255, 255, 255, 0.31);
     font-size: 14px; }
 
+.image-holder {
+  width: 100%;
+  border-radius: 8px;
+  margin-bottom: 24px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px; }
+  .image-holder .icon {
+    font-size: 173px;
+    color: white; }
+  .image-holder.primary {
+    background-color: #ffb200; }
+  .image-holder.secondary {
+    background-color: #ff6900; }
+  .image-holder.darker {
+    background-color: #1b2021; }
+
+.benefits {
+  z-index: 2;
+  position: relative;
+  padding: 80px 0;
+  box-shadow: 0 20px 60px 0 rgba(0, 0, 0, 0.22); }
+  .benefits .title-holder {
+    max-width: 500px; }
+  .benefits .benefit {
+    margin-top: 40px; }
+    .benefits .benefit .image-holder .icon {
+      font-size: 200px; }
+    .benefits .benefit .heading {
+      margin-bottom: 24px; }
+
 @-webkit-keyframes float-effect {
   from {
     transform: translateY(0); }
@@ -3251,6 +3328,8 @@ footer {
     left: -15%; } }
 
 @media (min-width: 768px) {
+  .benefits .benefit {
+    margin: 40px 0; }
   .main-hero .hero-content {
     text-align: center; }
     .main-hero .hero-content .featured-asset {
@@ -3299,6 +3378,9 @@ footer {
     line-height: 48px; }
   .caption.lg {
     font-size: 24px;
+    line-height: 32px; }
+  .caption.xmd {
+    font-size: 18px;
     line-height: 32px; }
   .caption.md {
     font-size: 16px;
@@ -3351,6 +3433,8 @@ footer {
     margin: 0 auto; }
   .spread {
     padding: 80px 0; }
+  .bt-spread {
+    padding-bottom: 80px; }
   .plan-card .btn {
     width: 100%;
     display: block; }
