--- a/scss/style.scss
+++ b/scss/style.scss
@@ -114,6 +114,10 @@ body {
     width: 100%;
 }
 
+.dark-bg {
+    background: $dark;
+}
+
 .desktop {
     display: none;
 }
@@ -338,6 +342,38 @@ body {
     z-index: 3;
 }
 
+.tab-nav {
+    height: 64px;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: flex-start;
+
+    & .tab-item {
+        font-weight: 600;
+        font-size: 18px;
+        color: #FFFFFF;
+        border-bottom: 4px solid rgba(0,0,0,0);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 30%;
+        text-decoration: none;
+        transition: $--transition;
+
+        &:hover {
+            background: rgba(255,255,255,.2);
+        }
+
+        &.selected {
+            background: rgba(255,255,255,1);
+            border-bottom: 4px solid $primary-color;
+            color: $dark;
+        }
+    }
+
+}
+
 //Structure
 
 .main-header {
@@ -521,7 +557,6 @@ body {
 }
 
 .our-plans {
-    background: rgba(250,250,250,1);
     
     & .heading-block {
       padding: 40px 0;
@@ -530,6 +565,33 @@ body {
       & .heading {
           margin-bottom: 24px;
       }
+    }
+}
+
+.plan-hero {
+    background: $dark;
+    & .row {
+    height: 360px;
+
+    & .hero-content {
+        padding-bottom: 32px;
+    }
+  }
+}
+
+.pricing {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    & .action-holder {
+        justify-content: flex-end;
+        margin: 24px 0;
+
+        & .btn {
+            margin: 0;
+            width: 100%
+        }
     }
 }
 
@@ -674,6 +736,72 @@ body {
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;   
+    }
+}
+
+.plan-navigation {
+    background: rgba(48,52,53,1);
+    box-shadow: 0 8px 14px 0 rgba(0,0,0,0.20);
+}
+
+.plan-information {
+    padding: 64px 0;
+    background-image: linear-gradient(180deg, rgba(0,0,0,0.50) 0%, rgba(0,0,0,0.80) 100%);
+
+    & .pricing {
+        padding: 40px 0;
+        & .price {
+            font-weight: 600;
+            margin: 0;
+            font-size: 40px;
+            line-height: 48px;
+            color: #FFFFFF;
+        }
+
+        & .caption {
+            margin: 8px 0;;
+        }
+
+        & .icon {
+            margin-left: 16px;
+            color: #3CCE1B;
+        }
+    }
+
+    & .plan-title {
+        margin-bottom: 32px;
+    }
+
+    & .features-list {
+        & .plan-item {
+            display: block;
+            margin: 16px 0;
+            font-weight: 600;
+            font-size: 16px;
+            color: #FFFFFF;
+            letter-spacing: 0;
+
+            & .icon {
+                color: #3CCE1B;
+                margin-right: 16px;
+            }
+        }
+    }
+
+    &:after {
+        content: " ";
+         position: absolute;
+         top: 0;
+         right: 0;
+         bottom: 0;
+         left: 0;
+         z-index: -1; 
+    }
+
+    &.standard:after {
+        background: url(../img/standard-bg.jpg) no-repeat bottom;
+        background-size: auto 100%;
+        bottom: -40%;
     }
 }
 
@@ -930,6 +1058,41 @@ footer {
 }
 
 @media (min-width: 992px) { 
+
+    .plan-information {
+        padding: 64px 0;
+        background-image: linear-gradient(180deg, rgba(0,0,0,0.50) 0%, rgba(0,0,0,0.80) 100%);
+    
+        &.standard:after {
+            background: url(../img/standard-bg.jpg) no-repeat center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;  
+        }
+    }
+
+    .tab-nav {
+    
+        & .tab-item {
+            min-width: 200px;
+        }
+    }
+
+    .pricing {
+        padding: 0;
+        justify-content: flex-end;
+        text-align: right;
+
+        & .price {
+            font-size: 60px;
+            line-height: 60px;
+        }
+    
+        & .action-holder {
+            justify-content: flex-end;
+        }
+    }
 
     .desktop {
         display: block;
