--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "node_modules/bootstrap/scss/bootstrap-reboot";
 @import "node_modules/bootstrap/scss/bootstrap-grid";
 @import "node_modules/bootstrap/scss/_modal";
+@import "node_modules/bootstrap/scss/_forms";
 
 
 
@@ -372,6 +373,92 @@ body {
         }
     }
 
+}
+
+.signup-hero {
+
+    & .hero-content {
+        margin-top: 200px;
+    }
+    & .brand-detail {
+        position: relative;
+        left: 0;
+        bottom: auto;
+        right: 0;
+        top: auto;
+        margin: 60px auto;
+    
+        & .icon {
+            font-size: 400px;
+            color: rgba(255,255,255,.11);
+        }
+    }
+}
+
+.plan-selected {
+    background: rgba(255,255,255,1);
+    border-radius: 14px;
+    padding: 24px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 32px 0;
+
+    & .heading {
+        color: $primary-color;
+    }
+}
+
+.form-holder {
+    padding: 32px 0;
+    & .heading {
+        margin-bottom: 24px;
+    }
+
+    & .link.white {
+        margin: 16px 0;
+    }
+}
+
+form .btn {
+    width: 100%;
+}
+
+.form-group {
+    margin: 16px 0;
+    & label {
+        display: block;
+        font-size: 18px;
+        letter-spacing: 0;  
+        margin: 8px;
+        color: rgba(255,255,255,1);
+    }
+    & .form-control {
+        background: rgba(255, 255, 255, 1);
+        border: 2px solid rgba(255,255,255,0);
+        border-radius: 8px;
+        font-weight: 600;
+        padding: 8px 16px;
+        font-size: 16px;
+        height: 56px;
+        color: $dark;
+        letter-spacing: 0;
+        display: block;
+        width: 100%;
+        transition: $--transition;
+
+        &::placeholder {
+          color: rgba(0,0,0,0.3);
+        }
+
+        &:focus {
+            border: 2px solid $primary-color;
+            background: rgba(255,252,245,1);
+            outline: 0;
+            box-shadow: 0 0 2px 0 $primary-color;
+        }
+    }
 }
 
 //Structure
@@ -1058,6 +1145,21 @@ footer {
 }
 
 @media (min-width: 992px) { 
+
+    .signup-hero {
+        & .brand-detail {
+            position: absolute;
+            left: auto;
+            bottom: auto;
+            right: -60%;
+            top: auto;
+            margin: 0;
+        
+            & .icon {
+                font-size: 800px;
+            }
+        }
+    }
 
     .plan-information {
         padding: 64px 0;
