--- a/css/style.css
+++ b/css/style.css
@@ -3433,6 +3433,9 @@ body {
 .dark-bg {
   background: #1b2021; }
 
+.margin-bt-24 {
+  margin-bottom: 24px; }
+
 .desktop {
   display: none; }
 
@@ -3824,10 +3827,13 @@ form .btn {
   flex-direction: column;
   justify-content: flex-start; }
   .pricing .action-holder {
+    display: flex;
+    flex-direction: column;
     justify-content: flex-end;
     margin: 24px 0; }
     .pricing .action-holder .btn {
       margin: 0;
+      margin-bottom: 16px;
       width: 100%; }
 
 .plan-card {
@@ -3872,7 +3878,12 @@ form .btn {
           color: #3CCE1B; }
   .plan-card .action-holder {
     border-top: 1px solid rgba(0, 0, 0, 0.05);
-    padding: 16px 32px; }
+    padding: 16px 32px 0;
+    display: flex;
+    flex-direction: column; }
+    .plan-card .action-holder .btn {
+      width: 100%;
+      margin: 0 0 8px; }
 
 .monetization {
   padding: 48px 0;
@@ -3981,6 +3992,24 @@ form .btn {
     background: url(../img/standard-bg.jpg) no-repeat bottom;
     background-size: auto 100%;
     bottom: -40%; }
+  .plan-information.advanced:after {
+    background: url(../img/advanced-bg.jpg) no-repeat bottom;
+    background-size: auto 100%;
+    bottom: -60%; }
+  .plan-information.enterprise:after {
+    background: url(../img/enterprise-bg.jpg) no-repeat bottom;
+    background-size: auto 100%;
+    bottom: -60%; }
+
+.politics .heading {
+  margin-top: 120px; }
+
+.politics p {
+  color: rgba(255, 255, 255, 0.7); }
+
+.politics strong {
+  font-size: 20px;
+  color: white; }
 
 footer {
   padding: 40px 0;
@@ -4069,6 +4098,26 @@ footer {
       margin-right: 16px;
       color: white; }
 
+.margin-top-24 {
+  margin-top: 24px; }
+
+.error-comp {
+  font-size: 300px;
+  margin: 0;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.1);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0; }
+
+.sucess-comp {
+  font-size: 60px;
+  margin: 0;
+  font-weight: 600;
+  color: #3cce1b;
+  padding: 30px 0; }
+
 @-webkit-keyframes float-effect {
   from {
     transform: translateY(0); }
@@ -4128,6 +4177,11 @@ footer {
     margin: 24px auto;
     display: flex;
     justify-content: center; }
+    .action-holder.centered {
+      text-align: center; }
+      .action-holder.centered .btn {
+        width: 100%;
+        margin: 0; }
     .action-holder .btn {
       display: initial;
       width: auto;
@@ -4152,6 +4206,18 @@ footer {
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.8) 100%); }
     .plan-information.standard:after {
       background: url(../img/standard-bg.jpg) no-repeat center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover; }
+    .plan-information.advanced:after {
+      background: url(../img/advanced-bg.jpg) no-repeat top fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover; }
+    .plan-information.enterprise:after {
+      background: url(../img/enterprise-bg.jpg) no-repeat top fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
