--- a/scss/style.scss
+++ b/scss/style.scss
@@ -937,7 +937,7 @@ footer {
 
     & .ft-logo-holder {
         text-align: center;
-        padding: 24px;
+        padding: 0;
         & img {
             width: 80px;
         }
@@ -968,7 +968,8 @@ footer {
 
     & .signature {
         text-align: center;
-        font-weight: 300;
+        font-weight: 600;
+        max-width: 620px;
         margin: 24px auto;
         display: block;
         color: rgba(255,255,255,0.31);
